--- a/thuchanhnhungjs.html
+++ b/thuchanhnhungjs.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <button type="button" onclick="ShowMeMessage();">Click Me!</button>
-<script>
-    function ShowMeMessage() {
-        alert('Xin Chào')
-    }
+
+</body>
+</html>
+<script src="index.js">
+
+
+
 
 
 </script>
-</body>
-</html>
